# workshop001_candidates_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/app/: PySQLSchema.md
docs/data_pipeline/: Pipeline.excalidraw
docs/database/: how_to_deploy_databases_on_render.md
notebooks/: 00_data_load.ipynb  01_data_exploration.ipynb  02_data_cleaning.ipynb  03_visualization.ipynb
sql/: schema.sql
sql/migrations/: schema_clean.sql
sql/queries/: 001_view_tables.sql  005_get_clean_data.sql
src/: main.py
src/connections/: db.py
src/utils/: credentials_management.py  pysqlschema.py
